--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="#">Website</a>
-        <p class="copyright">© Krishna Ganggas @ Individual Project</p>
+        <p class="copyright">© Krishna Ganggas @ Individual Learning Project</p>
     </div>
 
 </body>
